--- a/adminsCSS/DashBoardCate.css
+++ b/adminsCSS/DashBoardCate.css
@@ -128,11 +128,11 @@ body {
 }
 
 .header{
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
 }
 
 .header h1 {
-    font-size: 24px;
+    font-size: 16px;
     
 }
 .header h1 a{
@@ -376,5 +376,38 @@ button:hover {
 button:active {
     background-color: #004099; 
     transform: scale(0.98);
+}
+
+@media screen and (max-width: 768px) {
+    .barra-lateral {
+        width: 80px;
+        align-items: center;
+        overflow: hidden;
+    }
+
+    .contenedor-dashboard {
+        margin-left: 80px;
+    }
+
+    .texto-opcion {
+        display: none;
+    }
+
+    .opcion {
+        justify-content: center;
+        padding: 15px 0;
+        text-align: center;
+        width: 100%;
+        box-sizing: border-box;
+    }
+
+    .menu .opcion:hover {
+        background-color: #5cb693;
+    }
+
+    .admin h2,
+    .logo h2 {
+        display: none;
+    }
 }
 
