--- a/adminsCSS/pelota.css
+++ b/adminsCSS/pelota.css
@@ -77,7 +77,7 @@
 
 .producto {
     background-color: #e0e0e0;
-    padding: 10px;
+    padding: 10px; 
     border-radius: 8px;
     text-align: center;
     transition: transform 0.3s, background-color 0.3s;
@@ -294,4 +294,37 @@ body {
 
 .producto button:hover {
     background-color: #3e8e41;
+}
+
+@media screen and (max-width: 768px) {
+    .barra-lateral {
+        width: 80px;
+        align-items: center;
+        overflow: hidden;
+    }
+
+    .contenedor-dashboard {
+        margin-left: 80px;
+    }
+
+    .texto-opcion {
+        display: none;
+    }
+
+    .opcion {
+        justify-content: center;
+        padding: 15px 0;
+        text-align: center;
+        width: 100%;
+        box-sizing: border-box;
+    }
+
+    .menu .opcion:hover {
+        background-color: #5cb693;
+    }
+
+    .admin h2,
+    .logo h2 {
+        display: none;
+    }
 }
