--- a/adminsCSS/style2.css
+++ b/adminsCSS/style2.css
@@ -45,7 +45,7 @@ table th, table td {
 }
 
 table th {
-    background-color:#349771;
+    background-color:#212529;
     color: white;
 }
 
@@ -246,4 +246,37 @@ button:hover{
 .agregar svg{
     fill: #000000;
 
+}
+
+@media screen and (max-width: 768px) {
+    .barra-lateral {
+        width: 80px;
+        align-items: center;
+        overflow: hidden;
+    }
+
+    .contenedor-dashboard {
+        margin-left: 80px;
+    }
+
+    .texto-opcion {
+        display: none;
+    }
+
+    .opcion {
+        justify-content: center;
+        padding: 15px 0;
+        text-align: center;
+        width: 100%;
+        box-sizing: border-box;
+    }
+
+    .menu .opcion:hover {
+        background-color: #5cb693;
+    }
+
+    .admin h2,
+    .logo h2 {
+        display: none;
+    }
 }
