--- a/SupervisorCSS/DashBoardProve.css
+++ b/SupervisorCSS/DashBoardProve.css
@@ -116,13 +116,17 @@ body {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1) ;
 }
  table{
-width: 100%;
-border-collapse: collapse;
-margin-top: 20px;
-background-color: #fcfcfc;
+    flex: 1;
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+    background-color: #fcfcfc;
  }
-
+.container.mt-4{
+    width: 100%;
+ }
 thead{
+    width: 100%;
     background-color: var(--negro);
     color: var(--blanco);
 }
